# FEMCorrosionSimulation

./: CMakeLists.txt  README.md  main(test).cpp  main.cpp
Manuals/: MatlabElectrodesDynamic.txt  WebResources.txt
PersonalManuals/: UsefulCommands.txt  dolfinRelatedCommandsOrder.txt
PolarizationData/: AlPolData.txt  MgPolData.txt  UData.txt
mesh/: Coarsemesh.xdmf  Fracturemesh.xdmf  Fracturemesh.xml  Gapmesh.xdmf  Symmesh.xdmf  Unmesh.xdmf  mesh(before).xml  mesh(downscaled).xml  mesh(extrafine).xml  mesh(homo).xml  mesh(nonhomo).xml  mesh(well).xml  mesh.geo  mesh.msh  mesh.xdmf  mesh.xml
src/: CorrosionTools.cpp  DiffusionMassM.h  DiffusionStiffnessM.h  FEMTools.cpp  GeneralTools (copy).cpp  GeneralTools.cpp  MassMatrix.h  MeshTools.cpp  Poisson.h  StiffnessMatrix.h
ufl/: Poisson.ufl  StiffnessMatrix.ufl
uflFiles/: DiffusionMassM.ufl  DiffusionStiffnessM.ufl  MassMatrix.ufl  Poisson.ufl  StiffnessMatrix.ufl
